# telethon-session-mongo

./: .gitignore  CONTRIBUTING.md  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yml
telemongo/: __init__.py  telemongo.py
